2.   Ability to verify the Poptastic hosts and peers separately.
     The INI settings poptasticVerifyPopHostPeer and
     poptasticVerifySmtpHostPeer have been separated.
3.   Links distribution.
4.   Modified the SMP mechanism so that one party is prevented
     from explicitly setting future states of another party.
5.   Updated Qt products to version 5.4.1 on Windows.

0.19 (02/22/2015)

1.   URL distribution work. Incomplete.
2.   Updated NTRU files to 242722f72b2c97a995eb2a0e4a82dc0bd279fc7f.
3.   Added QSocketNotifier to the SCTP server implementation on Unix-like
     systems. Removed QTimer usage.
4.   Removed timer-based writes from spoton_sctp_socket. The change
     also provides the correct number of bytes written.
5.   Allow removal of URLs. Correct PQ permissions required.
6.   Provide a prompt before sharing the authentication and encryption
     keys with a kernel process. Optional.
7.   Removed duplicate QSqlQuery::exec() from
     spoton_misc::saveParticipantStatus().
8.   Some database fields require lowercase data.
9.   New dialog for housing many options.
10.  Clear the external address containers if the mechanisms are disabled.
11.  Allow opening of URLs in the appropriate Web browser as defined
     by the user's environment.
12.  Remove learned adaptive echo tokens that are not contained in the
     complete set of adaptive echo tokens.
13.  Secure the PostgreSQL password in the user's INI file.
14.  Implemented an asynchronous, and experimental, version of the five-step
     Silly Monster Protocol. Please see
     https://otr.cypherpunks.ca/Protocol-v3-4.0.0.html. Zero-knowledge
     proofs are not included with the distributed values. The values
     are transfered via an existing protocol. A protocol within a protocol?
     Poptastic-friendly.
15.  Update a participant's status information whenever geminis are updated.
16.  Improved magnet validation.
17.  Allow institution adding via the Enter key.
18.  Compact song playing.